--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
