--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.73.4",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-vector-icons": "^10.0.3",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "twrnc": "^3.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
