--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/stack": "^6.3.21",
     "@reduxjs/toolkit": "^2.1.0",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
@@ -17,7 +19,11 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-safe-area-context": "^4.8.2",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-reanimated": "^3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0",
     "twrnc": "^3.6.8"
