--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-dotenv": "^3.4.10",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-reanimated": "^3.6.2",
